# sentimental

./: .gitignore  Procfile  README.md  index.html  nltk.txt  pyproject.toml
model_creation/: 20210113_InvestigateVocab.ipynb  20211225_InitialModel.ipynb  20220113_InvestigateVocab.ipynb  20220115_TrainingPipeline.ipynb  20220120_IntegratedGradient.ipynb  20220120_TrainingPipelineForTransformers.ipynb
sentimental/: app.py
sentimental/static/js/: script.js
sentimental/templates/: index.html
