[tool.poetry]
name = "sentimental"
version = "0.1.0"
description = ""
authors = ["Dennis Feng <dennisfeng2@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.11"
numpy = "^1.21.5"
matplotlib = "^3.5.1"
jupyter = "^1.0.0"
pandas = "^1.3.5"
torch = "^1.10.1"
jupyterlab = "^3.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
