[tool.poetry]
name = "sentimental"
version = "0.1.0"
description = ""
authors = ["Dennis Feng <dennisfeng2@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.5"
numpy = "^1.21.5"
matplotlib = "^3.5.1"
jupyter = "^1.0.0"
pandas = "^1.3.5"
jupyterlab = "^3.2.5"
Flask = "^2.0.2"
gunicorn = "^20.1.0"
nltk = "^3.6.7"
torch = "^1.10.1"
torchtext = "^0.11.1"
pytorch-lightning = "^1.5.8"
spacy = "^3.2.1"
optuna = "^2.10.0"
wandb = "^0.12.9"
transformers = "^4.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
